--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             {
                 title: "作品集",
                 paragraphs: [
-                    "这里是<span class='highlight'>作品集</span>页面。",
+                    "<a class='highlight' href='./tree.html'><span>祝福语</span></a>",
                 ]
             },
             {
@@ -495,5 +495,6 @@
         window.addEventListener('resize', initIndicator);
     </script>
 </body>
+
 
 </html>
