--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             {
                 title: "博客",
                 paragraphs: [
-                    "这里是<span class='highlight'>博客</span>页面。",
+                    "<a class='highlight' href='./blog.html'><span>-></span></a>",
                 ]
             },
             {
@@ -504,5 +504,6 @@
 
 
 </html>
+
 
 
