--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
                 title: "作品集",
                 paragraphs: [
                     "<a class='highlight' href='./tree.html'><span>祝福语</span></a>",
+                    "<a class='highlight' href='./video.html'><span>AI视频生成</span></a>",
                 ]
             },
             {
@@ -504,6 +505,7 @@
 
 
 </html>
+
 
 
 
